--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-datasource": "^0.6.3",
     "apollo-server-express": "^2.9.13",
+    "bcrypt": "^3.0.7",
     "cors": "^2.8.5",
     "date-fns": "^2.8.1",
     "dotenv": "^8.2.0",
