--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.8.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "serverless": "^1.59.3",
     "serverless-http": "^2.3.0"
