--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "client",
+  "name": "gql-bookings-client",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && react-snapshot",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,7 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "react-snapshot": "^1.3.0"
-  }
+  "devDependencies": {}
 }
