--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,17 @@
 {
   "name": "gql-bookings-client",
   "version": "0.1.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ptrckqn/gql-bookings.git"
+  },
+  "author": "@ptrckqn",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ptrckqn/gql-bookings/issues"
+  },
   "homepage": "./",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
